Add toolbar and sidebar

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,1 +1,5 @@
-<p>toolbar works!</p>
+<mat-toolbar color="primary" class="toolbar">
+  <span>Employees Management</span>
+  <span class="middle-space"></span>
+  <span>Charles Darwin</span>
+</mat-toolbar>
