--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <app-toolbar></app-toolbar>
+<mat-sidenav-container class="container">
+  <mat-sidenav class="sidenav" mode="side" opened>Side content</mat-sidenav>
+  <mat-sidenav-content class="sidenav-content">
+    Main content
+  </mat-sidenav-content>
+</mat-sidenav-container>
 <router-outlet></router-outlet>
