--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <app-toolbar></app-toolbar>
 <mat-sidenav-container class="container">
-  <mat-sidenav class="sidenav" mode="side" opened>Side content</mat-sidenav>
+  <mat-sidenav class="sidenav" mode="side" opened>
+    <app-sidebar></app-sidebar>
+  </mat-sidenav>
   <mat-sidenav-content class="sidenav-content">
-    Main content
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
-<router-outlet></router-outlet>
