--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .container {
-
+  min-height: 100%;
 }
 
 .sidenav {
@@ -11,5 +11,5 @@
 }
 
 .sidenav-content {
-  padding-top: 64px;
+  padding: 84px 16px 20px 16px;
 }
