--- a/src/app/components/employees/employees.component.scss
+++ b/src/app/components/employees/employees.component.scss
@@ -19,7 +19,7 @@ tr {
   border-bottom: 1px solid rgba(0,0,0,.12);
 }
 
-tr:hover {
+tr:not(:first-child):hover {
   background: whitesmoke;
   cursor: pointer;
 }
