Add phone pipe.

--- a/src/app/components/employee-detail/employee-detail.component.html
+++ b/src/app/components/employee-detail/employee-detail.component.html
@@ -8,7 +8,7 @@
       <div>Name</div><div>{{emp.name + ' ' + emp.surname}}</div>
     </div>
     <div class="info">
-      <div>Mobile No.</div><div>{{emp.mobileNo}}</div>
+      <div>Mobile No.</div><div>{{emp.mobileNo | phone}}</div>
     </div>
   </div>
   <div>
