--- a/src/app/components/employees/employees.component.html
+++ b/src/app/components/employees/employees.component.html
@@ -1,4 +1,8 @@
-<div class='table-wrapper'>
+<div class="table-wrapper">
+  <div class="search">
+    <input type="text" placeholder="Search employee">
+    <mat-icon >search</mat-icon>
+  </div>
   <table>
     <tr>
       <th>Name</th>
