Add search function with debounceTime and distinctUntilChanged.

--- a/src/app/components/employees/employees.component.html
+++ b/src/app/components/employees/employees.component.html
@@ -1,6 +1,6 @@
 <div class="table-wrapper">
   <div class="search">
-    <input type="text" placeholder="Search employee">
+    <input #searchBox type="text" (input)="search(searchBox.value)" placeholder="Search employee">
     <mat-icon >search</mat-icon>
   </div>
   <table>
