Add more employees

--- a/src/app/components/employees/employees.component.html
+++ b/src/app/components/employees/employees.component.html
@@ -17,6 +17,7 @@
   </table>
   <div>
     <mat-paginator
+      showFirstLastButtons
       [length]="totalEmployees"
       [pageSize]="pageSize"
       [pageIndex]="pageIndex"
