--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -4,6 +4,14 @@
   left: 0;
   right: 0;
   z-index: 10;
+  background-color: #3f51b5;
+  color: #ffffff;
+  display: flex;
+  height: 56px;
+  line-height: 56px;
+  padding: 0 16px;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .middle-space {
