--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="primary" class="toolbar">
+<div class="toolbar">
   <span>Employees Management</span>
   <span class="middle-space"></span>
   <span>Charles Darwin</span>
-</mat-toolbar>
+</div>
