--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,5 +11,11 @@
 }
 
 .sidenav-content {
-  padding: 72px 16px 20px 16px;
+  padding: 72px 16px 16px 16px;
+  display: flex;
+
+  .wrapper {
+    flex: 1 1 auto;
+    max-width: 1000px;
+  }
 }
