--- a/src/app/components/employee-detail/employee-detail.component.html
+++ b/src/app/components/employee-detail/employee-detail.component.html
@@ -1,3 +1,7 @@
+<div class="top-bar">
+  <div class="middle-space"></div>
+  <button>Edit</button>
+</div>
 <div class="wrapper">
   <div class="section">
     <div class="title">Personal Info</div>
