--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,25 @@ a {
   color: rgba(0,0,0,.87);
   display: block;
 }
+
+.middle-space {
+  flex: 1 1 auto;
+}
+
+button {
+  background-color: #3f51b5;
+  color: #ffffff;
+  padding: 0 16px;
+  min-width: 64px;
+  line-height: 36px;
+  border: 0;
+  border-radius: 4px;
+  font-family: inherit;
+  font-weight: 500;
+  cursor: pointer;
+  outline: none;
+}
+
+button:hover {
+  background-color: #445DBF;
+}
