Update button style

--- a/src/app/components/employee-detail/employee-detail.component.html
+++ b/src/app/components/employee-detail/employee-detail.component.html
@@ -1,6 +1,6 @@
 <div class="top-bar">
   <div class="middle-space"></div>
-  <button>Edit</button>
+  <button class="main">Edit</button>
 </div>
 <div class="wrapper">
   <div class="section">
