--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@ a {
   flex: 1 1 auto;
 }
 
-button {
+button.main {
   background-color: #3f51b5;
   color: #ffffff;
   padding: 0 16px;
@@ -27,6 +27,6 @@ button {
   outline: none;
 }
 
-button:hover {
+button.main:hover {
   background-color: #445DBF;
 }
