--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@ button.main {
   background-color: #3f51b5;
   color: #ffffff;
   padding: 0 16px;
-  min-width: 64px;
+  min-width: 100px;
   line-height: 36px;
   border: 0;
   border-radius: 4px;
@@ -25,8 +25,20 @@ button.main {
   font-weight: 500;
   cursor: pointer;
   outline: none;
-}
 
-button.main:hover {
-  background-color: #445DBF;
+  &:hover {
+    background-color: #445DBF;
+  }
+
+  &.cancel {
+    color: #3f51b5;
+    background-color: #ffffff;
+    border: 1px solid #3f51b5;
+    line-height: 34px;
+  }
+
+  &.cancel:hover {
+    color: #445DBF;
+    border: 1px solid #445DBF;
+  }
 }
