Disable save button if form is not valid or pristine. Add error message.

--- a/src/app/components/employee-detail/employee-detail.component.html
+++ b/src/app/components/employee-detail/employee-detail.component.html
@@ -1,12 +1,13 @@
 <form [formGroup]="employeeForm">
   <div class="top-bar">
+    <!-- valid = {{employeeForm.valid}} dirty = {{employeeForm.dirty}} -->
     <div class="middle-space"></div>
     <ng-template [ngIf]="mode === 'view'">
       <button class="main" (click)="onEdit()">Edit</button>
     </ng-template>
     <ng-template [ngIf]="mode === 'edit'">
       <button class="main cancel" (click)="onCancel()" >Cancel</button>
-      <button class="main" (click)="onSave()">Save</button>
+      <button class="main" (click)="onSave()" [disabled]="!employeeForm.valid || employeeForm.pristine">Save</button>
     </ng-template>
   </div>
   <div class="wrapper">
@@ -20,6 +21,9 @@
         </ng-template>
         <ng-template [ngIf]="mode === 'edit'">
           <input class="main" type="text" formControlName="name">
+          <div class="error" *ngIf="employeeForm.controls.name.errors && employeeForm.controls.name.errors.required">
+            This field is required.
+          </div>
         </ng-template>
       </div>
       <div class="info">
@@ -29,6 +33,9 @@
         </ng-template>
         <ng-template [ngIf]="mode === 'edit'">
           <input class="main" type="text" formControlName="surname">
+          <div class="error" *ngIf="employeeForm.controls.surname.errors && employeeForm.controls.surname.errors.required">
+            This field is required.
+          </div>
         </ng-template>
       </div>
       <div class="info">
@@ -38,6 +45,9 @@
         </ng-template>
         <ng-template [ngIf]="mode === 'edit'">
           <input class="main" type="text" formControlName="mobileNo">
+          <div class="error" *ngIf="employeeForm.controls.mobileNo.errors && employeeForm.controls.mobileNo.errors.required">
+            This field is required.
+          </div>
         </ng-template>
       </div>
     </div>
@@ -76,6 +86,9 @@
         </ng-template>
         <ng-template [ngIf]="mode === 'edit'">
           <input class="main" type="number" formControlName="salary">
+          <div class="error" *ngIf="employeeForm.controls.salary.errors && employeeForm.controls.salary.errors.required">
+            This field is required.
+          </div>
         </ng-template>
       </div>
       <div class="info">
@@ -87,6 +100,9 @@
           <input class="main" type="text" [matDatepicker]="picker" formControlName="joinDate">
           <mat-datepicker-toggle [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
+          <div class="error" *ngIf="employeeForm.controls.joinDate.errors && employeeForm.controls.joinDate.errors.required">
+            This field is required.
+          </div>
         </ng-template>
       </div>
     </div>
