Fix error. Reduce delay.

--- a/src/app/components/employee-detail/employee-detail.component.html
+++ b/src/app/components/employee-detail/employee-detail.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="employeeForm">
+<form [formGroup]="employeeForm" *ngIf="employeeForm">
   <div class="top-bar">
     <!-- valid = {{employeeForm.valid}} dirty = {{employeeForm.dirty}} -->
     <div class="middle-space"></div>
