--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -1,10 +1,15 @@
 <div class="dialog-wrapper">
-  <div class="title" *ngIf="data.title">{{ data.title }}</div>
-  <mat-dialog-content>
-    {{ data.msg }}
-  </mat-dialog-content>
-  <mat-dialog-actions>
-    <button class="main cancel" mat-dialog-close *ngIf="data.cancelText">{{ data.cancelText }}</button>
-    <button class="main" [mat-dialog-close]="true">{{ data.confirmText }}</button>
-  </mat-dialog-actions>
+  <ng-template [ngIf]="!data.isLoading">
+    <div class="title" *ngIf="data.title">{{ data.title }}</div>
+    <mat-dialog-content>
+      {{ data.msg }}
+    </mat-dialog-content>
+    <mat-dialog-actions>
+      <button class="main cancel" mat-dialog-close *ngIf="data.cancelText">{{ data.cancelText }}</button>
+      <button class="main" [mat-dialog-close]="true">{{ data.confirmText }}</button>
+    </mat-dialog-actions>
+  </ng-template>
+  <ng-template [ngIf]="data.isLoading">
+    <mat-spinner diameter="50"></mat-spinner>
+  </ng-template>
 </div>
