--- a/src/app/components/employees/employees.component.html
+++ b/src/app/components/employees/employees.component.html
@@ -1,7 +1,9 @@
 <div class="table-wrapper">
   <div class="search">
-    <input #searchBox type="text" (input)="search(searchBox.value)" placeholder="Search employee">
-    <mat-icon >search</mat-icon>
+    <input class="main" #searchBox type="text" (input)="search(searchBox.value)" placeholder="Search employee">
+    <mat-icon>search</mat-icon>
+    <div class="middle-space"></div>
+    <button class="main">Add employee</button>
   </div>
   <table>
     <tr>
