--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ a {
 }
 
 .middle-space {
-  flex: 1 1 auto;
+  flex: 1 0 8px;
 }
 
 button.main {
@@ -59,6 +59,10 @@ input.main {
   font-size: inherit;
   font-family: inherit;
   outline: none;
+
+  &::placeholder {
+    color: rgba(0,0,0,.50);
+  }
 
   &:focus {
     border-color: #445DBF;
